--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
+    "postinstall": "echo 'Post-install completed'"
   },
   "author": "",
   "license": "ISC",
