--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,22 @@
-# RAG Medical Assistant Dependencies - Compatible with Python 3.13
+# RAG Medical Assistant Dependencies - Railway Compatible
 # Base requirements
-Flask
-numpy
-pandas
-faiss-cpu
-sentence-transformers
-scikit-learn
-torch
-torchvision
-transformers
-accelerate
-sentencepiece
-evaluate
-nltk
-rouge_score
-pydicom
-Pillow
-openpyxl
-gunicorn
-python-dotenv
+Flask>=2.3.0
+numpy>=1.24.0
+pandas>=2.0.0
+faiss-cpu>=1.7.0
+sentence-transformers>=2.2.0
+scikit-learn>=1.3.0
+torch>=2.0.0
+torchvision>=0.15.0
+transformers>=4.30.0
+accelerate>=0.20.0
+sentencepiece>=0.1.99
+evaluate>=0.4.0
+nltk>=3.8.0
+rouge_score>=0.1.2
+Pillow>=10.0.0
+openpyxl>=3.1.0
+python-dotenv>=1.0.0
 sacremoses>=0.0.53
-flask-ngrok>=0.0.25
-pyngrok>=7.0.5
 fastapi>=0.104.1
 uvicorn>=0.24.0 
