--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["python3", "python3-pip", "nodejs", "npm", "build-essential"]
+nixPkgs = ["python3", "python3-pip", "nodejs", "npm", "gcc", "make"]
 
 [phases.install]
 cmds = [
