--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -11,9 +11,10 @@ cmds = [
 
 [phases.build]
 cmds = [
-  "python -c 'import torch; print(\"PyTorch version:\", torch.__version__)'",
-  "python -c 'import transformers; print(\"Transformers version:\", transformers.__version__)'",
-  "echo 'Build completed successfully'"
+  "python3 -c 'import sys; print(\"Python version:\", sys.version)'",
+  "python3 -c 'import torch; print(\"PyTorch version:\", torch.__version__)'",
+  "python3 -c 'import transformers; print(\"Transformers version:\", transformers.__version__)'",
+  "echo 'Build completed successfully with Python3'"
 ]
 
 [start]
