fix: use gnumake instead of make for Nix compatibility on Railway

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["python3", "python3-pip", "nodejs", "npm", "gcc", "make"]
+nixPkgs = ["python3", "python3-pip", "nodejs", "npm", "gnumake", "gcc"]
 
 [phases.install]
 cmds = [
