--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "Root package.json for motion-clinic-main. Run backend and frontend from their own folders.",
   "scripts": {
-    "start": "echo Please run backend and frontend from their respective folders.",
+    "start": "cd backend && npm start",
     "dev": "echo Please run backend and frontend from their respective folders."
   }
 }
